fixed card images sizes on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,4 +210,8 @@ textarea.form-control {
   .navbar-light .navbar-nav .nav-item:hover {
     border-bottom: 0;
   }
+  .card-img-top{
+    width: 100%;
+    height: 100%;
+}
 }
